@@ -1,4 +1,4 @@
-# $Id: Makefile,v 1.18 2007/07/10 09:05:15 deraugla Exp $
+# $Id: Makefile,v 1.19 2007/07/10 14:09:06 deraugla Exp $
 
 include ../config/Makefile
 
@@ -10,10 +10,10 @@ CAMLP4OM=pa_o.cmo pa_op.cmo ../meta/pr_dump.cmo
 CAMLP4SCHM=pa_scheme.cmo ../meta/pr_dump.cmo
 CAMLP4OMX=pa_o.cmx pa_op.cmx ../meta/pr_dump.cmx
 SHELL=/bin/sh
-COUT=$(OBJS) $(OLD_OBJS) camlp4o$(EXE) camlp4sch$(EXE)
-COPT=camlp4o.opt
+COUT=$(OBJS) $(OLD_OBJS) $(NAME)o$(EXE) $(NAME)sch$(EXE)
+COPT=$(NAME)o.opt
 
-all: $(COUT) mkcamlp4.sh
+all: $(COUT) mk$(NAME).sh
 opt: $(COPT)
 
 pr_rp_old.cmo: parserify.cmo pr_rp_main.cmo
@@ -25,20 +25,20 @@ pr_op_old.cmo: parserify.cmo pr_op_main.cmo
 pr_schemep.cmo: parserify.cmo pr_schp_main.cmo
 	$(OCAMLC) parserify.cmo pr_schp_main.cmo -a -o $@
 
-camlp4o$(EXE): ../camlp4/camlp4$(EXE) $(CAMLP4OM)
-	rm -f camlp4o$(EXE)
-	cd ../camlp4; $(MAKE) CAMLP4=../etc/camlp4o$(EXE) CAMLP4M="-I ../etc $(CAMLP4OM)"
+$(NAME)o$(EXE): ../camlp4/$(NAME)$(EXE) $(CAMLP4OM)
+	rm -f $(NAME)o$(EXE)
+	cd ../camlp4; $(MAKE) CAMLP4=../etc/$(NAME)o$(EXE) CAMLP4M="-I ../etc $(CAMLP4OM)"
 
-camlp4sch$(EXE): ../camlp4/camlp4$(EXE) $(CAMLP4SCHM)
-	rm -f camlp4sch$(EXE)
-	cd ../camlp4; $(MAKE) CAMLP4=../etc/camlp4sch$(EXE) CAMLP4M="-I ../etc $(CAMLP4SCHM)"
+$(NAME)sch$(EXE): ../camlp4/$(NAME)$(EXE) $(CAMLP4SCHM)
+	rm -f $(NAME)sch$(EXE)
+	cd ../camlp4; $(MAKE) CAMLP4=../etc/$(NAME)sch$(EXE) CAMLP4M="-I ../etc $(CAMLP4SCHM)"
 
-camlp4o.opt: $(CAMLP4OMX)
-	rm -f camlp4o.opt
-	cd ../camlp4; $(MAKE) optp4 CAMLP4OPT=../etc/camlp4o.opt CAMLP4M="-I ../etc $(CAMLP4OMX)"
+$(NAME)o.opt: $(CAMLP4OMX)
+	rm -f $(NAME)o.opt
+	cd ../camlp4; $(MAKE) optp4 CAMLP4OPT=../etc/$(NAME)o.opt CAMLP4M="-I ../etc $(CAMLP4OMX)"
 
-mkcamlp4.sh: mkcamlp4.sh.tpl
-	sed -e "s!LIBDIR!$(LIBDIR)!g" mkcamlp4.sh.tpl > mkcamlp4.sh
+mk$(NAME).sh: mkcamlp4.sh.tpl
+	sed -e "s!LIBDIR!$(LIBDIR)!g" mkcamlp4.sh.tpl > mk$(NAME).sh
 
 bootstrap_scheme:
 	@$(MAKE) bootstrap_l L=scheme | grep -v directory
@@ -50,17 +50,17 @@ compare_lisp:
 	@$(MAKE) compare_l L=lisp | grep -v directory
 
 bootstrap_l:
-	../boot/camlp4 ./pa_$Lr.cmo ./q_phony.cmo -I ../boot pa_extend.cmo ./pr_r.cmo ./pr_extend.cmo ./pr_rp.cmo pa_$L.ml > tmp
+	ocamlrun$(EXE) ../boot/$(NAME) ./pa_$Lr.cmo -I ../boot pa_extend.cmo ./pr_r.cmo ./pr_extend.cmo ./pr_rp.cmo ./q_phony.cmo pa_$L.ml > tmp
 	mv pa_$Lr.ml pa_$Lr.ml.old
 	sed -e 's/^;; \(.*\)$$/(* \1 *)/' -e 's/^; \(.*\)$$/(* \1 *)/' -e 's|./pa_$Lr.cmo|pa_r.cmo pa_rp.cmo|' -e 's/$$Id.*\$$/File generated by pretty print; do not edit!/' tmp > pa_$Lr.ml
 	rm -f tmp
 
 compare_l:
-	../boot/camlp4 ./pa_$Lr.cmo ./q_phony.cmo -I ../boot pa_extend.cmo ./pr_r.cmo ./pr_extend.cmo ./pr_rp.cmo pa_$L.ml | sed -e 's/^;; \(.*\)$$/(* \1 *)/' -e 's/^; \(.*\)$$/(* \1 *)/' -e 's|./pa_$Lr.cmo|pa_r.cmo pa_rp.cmo|' -e 's/$$Id.*\$$/File generated by pretty print; do not edit!/' | diff -c pa_$Lr.ml -
+	ocamlrun$(EXE) ../boot/$(NAME) ./pa_$Lr.cmo -I ../boot pa_extend.cmo ./pr_r.cmo ./pr_extend.cmo ./pr_rp.cmo ./q_phony.cmo pa_$L.ml | sed -e 's/^;; \(.*\)$$/(* \1 *)/' -e 's/^; \(.*\)$$/(* \1 *)/' -e 's|./pa_$Lr.cmo|pa_r.cmo pa_rp.cmo|' -e 's/$$Id.*\$$/File generated by pretty print; do not edit!/' | diff -c pa_$Lr.ml -
 
 clean::
 	rm -f *.cm* *.pp[io] *.o *.bak .*.bak *.out *.opt
-	rm -f mkcamlp4.sh camlp4o$(EXE) camlp4sch$(EXE)
+	rm -f mk$(NAME).sh $(NAME)o$(EXE) $(NAME)sch$(EXE)
 
 depend:
 	cp .depend .depend.bak
@@ -73,13 +73,13 @@ depend:
 get_promote:
 
 install:
-	-$(MKDIR) "$(LIBDIR)/camlp4" "$(BINDIR)"
-	cp $(OBJS) "$(LIBDIR)/camlp4/."
-	cp lib.sml "$(LIBDIR)/camlp4/."
-	cp camlp4o$(EXE) camlp4sch$(EXE) "$(BINDIR)/."
+	-$(MKDIR) "$(LIBDIR)/$(NAME)" "$(BINDIR)"
+	cp $(OBJS) "$(LIBDIR)/$(NAME)/."
+	cp lib.sml "$(LIBDIR)/$(NAME)/."
+	cp $(NAME)o$(EXE) $(NAME)sch$(EXE) "$(BINDIR)/."
 	if test -f $(COPT); then cp $(COPT) "$(BINDIR)/."; fi
-	cp mkcamlp4.sh "$(BINDIR)/mkcamlp4"
-	chmod a+x "$(BINDIR)/mkcamlp4"
+	cp mk$(NAME).sh "$(BINDIR)/mk$(NAME)"
+	chmod a+x "$(BINDIR)/mk$(NAME)"
 
 pa_lisp.cmo: pa_lispr.cmo
 pa_scheme.cmo: pa_schemer.cmo
