@@ -9,19 +9,19 @@ OBJS=q_MLast.cmo pa_r.cmo pa_rp.cmo pa_extend.cmo pa_extend_m.cmo pa_macro.cmo p
 CAMLP4RM=pa_r.cmo pa_rp.cmo pr_dump.cmo
 CAMLP4RMX=pa_r.cmx pa_rp.cmx pr_dump.cmx
 SHELL=/bin/sh
-COUT=$(OBJS) camlp4r$(EXE)
-COPT=camlp4r.opt
+COUT=$(OBJS) $(NAME)r$(EXE)
+COPT=$(NAME)r.opt
 
 all: $(COUT)
 opt: $(COPT)
 
-camlp4r$(EXE): ../camlp4/camlp4$(EXE) $(CAMLP4RM)
-	rm -f camlp4r$(EXE)
-	cd ../camlp4; $(MAKE) OTOP=$(OTOP) CAMLP4=../meta/camlp4r$(EXE) CAMLP4M="-I ../meta $(CAMLP4RM)"
+$(NAME)r$(EXE): ../camlp4/$(NAME)$(EXE) $(CAMLP4RM)
+	rm -f $(NAME)r$(EXE)
+	cd ../camlp4; $(MAKE) OTOP=$(OTOP) CAMLP4=../meta/$(NAME)r$(EXE) CAMLP4M="-I ../meta $(CAMLP4RM)"
 
-camlp4r.opt: $(CAMLP4RMX)
-	rm -f camlp4r.opt
-	cd ../camlp4; $(MAKE) optp4 OTOP=$(OTOP) CAMLP4OPT=../meta/camlp4r.opt CAMLP4M="-I ../meta $(CAMLP4RMX)"
+$(NAME)r.opt: $(CAMLP4RMX)
+	rm -f $(NAME)r.opt
+	cd ../camlp4; $(MAKE) optp4 OTOP=$(OTOP) CAMLP4OPT=../meta/$(NAME)r.opt CAMLP4M="-I ../meta $(CAMLP4RMX)"
 
 clean::
 	rm -f *.cm* *.pp[io] *.o *.bak .*.bak $(COUT) $(COPT)
@@ -43,10 +43,10 @@ compare:
 	done
 
 install:
-	-$(MKDIR) "$(LIBDIR)/camlp4" "$(BINDIR)"
-	cp $(OBJS) "$(LIBDIR)/camlp4/."
-	cp pa_macro.cmi pa_extend.cmi "$(LIBDIR)/camlp4/."
-	cp camlp4r$(EXE) "$(BINDIR)/."
+	-$(MKDIR) "$(LIBDIR)/$(NAME)" "$(BINDIR)"
+	cp $(OBJS) "$(LIBDIR)/$(NAME)/."
+	cp pa_macro.cmi pa_extend.cmi "$(LIBDIR)/$(NAME)/."
+	cp $(NAME)r$(EXE) "$(BINDIR)/."
 	if test -f $(COPT); then cp $(COPT) "$(BINDIR)/."; fi
 
 include .depend
